Change html i to em

--- a/tests/door43_tools_tests/resources/templates/project-page.html
+++ b/tests/door43_tools_tests/resources/templates/project-page.html
@@ -35,7 +35,7 @@
       </div>
       <div id="main-navbar" class="navbar-nav navbar-right collapse navbar-collapse">
         <ul id="menu-main-menu" class="nav navbar-nav">
-          
+
             <li class="dropdown"><a href="/en/about/" aria-haspopup="true" aria-expanded="false">About</a> <button type="button" class="btn btn-nav-dark dropdown-toggle" data-toggle="dropdown"><span class="fa fa-caret-down"></span><span class="fa fa-caret-up"></span></button>
 <ul class="dropdown-menu dropdown-menu-left">
 <li class=""><a href="/en/statement-of-faith/">Statement of Faith</a></li>
@@ -45,7 +45,7 @@
 </li>
 <li class=""><a href="/en/contact/">Contact</a></li>
 
-          
+
         </ul>
       </div>
     </div>
@@ -63,14 +63,14 @@
             <header>
                 <div id="header-title">
                     <h1 itemprop="headline">
-                        <span id="starred-icon"><i class="fa fa-star-o"></i></span>
+                        <span id="starred-icon"><em class="fa fa-star-o"></em></span>
                         <span id="h1">Header</span>
-                        <span id="build-status-icon"><i class="fa fa-question-circle"></i></span>
+                        <span id="build-status-icon"><em class="fa fa-question-circle"></em></span>
                     </h1>
                 </div>
                 <div id="sub-header">
                     <span id="last-updated">Updated ? hours ago</span>
-                    <span id="views"><i class="fa fa-eye"></i></span>
+                    <span id="views"><em class="fa fa-eye"></em></span>
                     <span id="num-of-views"># views</span>
                 </div>
             </header>
