--- a/tests/door43_tools_tests/resources/templates/project-page.html
+++ b/tests/door43_tools_tests/resources/templates/project-page.html
@@ -116,17 +116,9 @@
 <script type="text/javascript" src="/js/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/parallax.min.js"></script>
 <script type="text/javascript" src="/js/application.js"></script>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-60106521-4']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KR9PN7JL65"></script>
+<script type="text/javascript" src="/js/ga4.js"></script>
 
 <script type="text/javascript" src="/js/general-tools.js"></script>
 <script type="text/javascript" src="/js/project-page.js"></script>
